# safari-to-yacy

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
safari_to_yacy/: main.py
tests/: test_pkg.py
