[tool.poetry]
name = "safari-to-yacy"
version = "0.1.0"
description = "Send current Safari url to yacy for indexing."
authors = ["Robert Luke <code@robertluke.net>"]

[tool.poetry.scripts]
safari_to_yacy = "safari_to_yacy.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
types-requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
